Add level of coolness to movie search

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		
-		<title>5 CLICKS 2 MOVIE</title>
+		<title>Movie Finder</title>
 	</head>
 	
 	<body>
@@ -29,7 +29,7 @@
         </main>
         
         <footer class="small text-center text-muted">
-            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.
+            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.<br>Made with love by Leo <3.
         </footer>
 
 	</body>
