--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,26 @@
 			<h5>Choose Genre</h5>
 			<select class="form-control" name="genre">
 				{% for genre in genres %}
-					{% if genre["genre"] != "\\N" and genre["genre"] != "Talk-Show" and genre["genre"] != "Game-Show" %}
+					{% if genre["genre"] != "\\N" and genre["genre"] != "Talk-Show" and genre["genre"] != "Game-Show" and genre["genre"] != "Reality-TV" and genre["genre"] != "News"%}
 						<option>{{ genre["genre"] }}</option>
 					{% endif %}
 				{% endfor %}
 			</select>
 		</div>
+		<br>
+		<div class="form-check">
+			<input class="form-check-input" type="radio" name="coolness" id="exampleRadios1" value="Popular" checked>
+		  	<label class="form-check-label" for="exampleRadios1">Popular Films</label>
+		</div>
+		<div class="form-check">
+		 	<input class="form-check-input" type="radio" name="coolness" id="exampleRadios2" value="Not So Popular">
+		  	<label class="form-check-label" for="exampleRadios2">Not so Popular Films</label>
+		</div>
+		<div class="form-check">
+		 	<input class="form-check-input" type="radio" name="coolness" id="exampleRadios2" value="Almost Unknown">
+		  	<label class="form-check-label" for="exampleRadios2">Almost Unkown</label>
+		</div>
+		<br>
 		<button class="btn btn-primary" type="submit">Search</button>
 	</form>
 {% endblock %}
