Adjust number of votes for each coolness for genre results. Add collnes to cross genre results. Add average rating to genre and cross genre results.

--- a/templates/crossgenres.html
+++ b/templates/crossgenres.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 	
-	<h1>Cross genres for {{ original_genre }}</h1>
+	<h1>Cross genres for {{ coolness }} {{ original_genre }}</h1>
 
 	{% for genre in genres %}
 	<br>
@@ -11,7 +11,9 @@
 		<tr>
 			{% for movie in movies %}
 				{% if movie["genre"] == genre %}
-				<td><a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank"><img src="{{ movie['poster'] }}"></a><br>{{ movie["primaryTitle"] }}</td>
+				<td><a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank"><img src="{{ movie['poster'] }}"></a>
+					<br><a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank">{{ movie["primaryTitle"] }}</a> 
+					(<strong>{{ movie["averageRating"] }}</strong>)</td>
 				{% endif %}
 			{% endfor %}
 		<tr>
