--- a/templates/results.html
+++ b/templates/results.html
@@ -9,13 +9,15 @@
 		<tr>
 			{% for movie in movie_row %}
 				<td><a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank"><img src="{{ movie['poster'] }}"></a>
-					<br>{{ movie["primaryTitle"] }}</td>
+					<br><a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank">{{ movie["primaryTitle"] }}</a> (<strong>{{ movie["averageRating"] }}</strong>)</td>
 			{% endfor %}
 		<tr>
 		{% endfor %}
 	</table>
+	<br>
 	<form action="/crossgenres" method="POST">
 		<input type="hidden" name="genre" value="{{ original_genre }}">
+		<input type="hidden" name="coolness" value="{{ coolness }}">
 		<button class="btn btn-primary" type="submit">Check Cross Genres</button>
 	</form>
 
