--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<br>
 	<form action="/" method="POST">
 		<div class="form-group">
-			<h2>Choose Genre</h2>
+			<h1 class="display-4">Choose Genre</h1>
 			<select class="form-control" name="genre">
 				{% for genre in genres %}
 					{% if genre["genre"] != "\\N" and genre["genre"] != "Talk-Show" and genre["genre"] != "Game-Show" and genre["genre"] != "Reality-TV" and genre["genre"] != "News"%}
@@ -15,18 +15,19 @@
 		</div>
 		<br>
 		<div class="form-check">
-			<input class="form-check-input" type="radio" name="coolness" id="exampleRadios1" value="Popular" checked>
-		  	<label class="form-check-label" for="exampleRadios1">Popular Films</label>
+			<input class="form-check-input" type="radio" name="coolness" value="Popular" checked>
+		  	<label class="form-check-label" for="exampleRadios1">😀&nbsp;&nbsp;Popular Films</label>
 		</div>
 		<div class="form-check">
-		 	<input class="form-check-input" type="radio" name="coolness" id="exampleRadios2" value="Not So Popular">
-		  	<label class="form-check-label" for="exampleRadios2">Not so Popular Films</label>
+		 	<input class="form-check-input" type="radio" name="coolness" value="Not So Popular">
+		  	<label class="form-check-label" for="exampleRadios2">🤓&nbsp;&nbsp;Not so Popular Films</label>
 		</div>
 		<div class="form-check">
-		 	<input class="form-check-input" type="radio" name="coolness" id="exampleRadios2" value="Almost Unknown">
-		  	<label class="form-check-label" for="exampleRadios2">Almost Unkown</label>
+		 	<input class="form-check-input" type="radio" name="coolness" value="Lesser Known">
+		  	<label class="form-check-label" for="exampleRadios2">😎&nbsp;&nbsp;Lesser Known Films</label>
 		</div>
 		<br>
 		<button class="btn btn-primary" type="submit">Search</button>
 	</form>
+	
 {% endblock %}
