--- a/templates/crossgenre.html
+++ b/templates/crossgenre.html
@@ -1,32 +1,37 @@
 {% extends "layout.html" %}
 
 {% block main %}
-	<br>
-	<form action="/crossgenre" method="POST">
-		<div class="form-group">
-			<h1 class="display-4">Choose Main Genre</h1>
-			<select class="form-control" name="genre">
-				{% for genre in genres %}
-					{% if genre["genre"] != "\\N" and genre["genre"] != "Talk-Show" and genre["genre"] != "Game-Show" and genre["genre"] != "Reality-TV" and genre["genre"] != "News"%}
-						<option>{{ genre["genre"] }}</option>
-					{% endif %}
-				{% endfor %}
-			</select>
+	<h1 class="display-3">Cross Genres</h1>
+	<p class="subtitulo">Find the highest rated movies on IMDB.</p>
+	<div class="card border-light mb-3" style="max-width: 18rem; display: inline-block;">
+		<div class="card-body">
+			<form action="/crossgenre" method="POST">
+				<div class="form-group">
+					<h3> Choose Main Genre </h3>
+					<select class="form-control" name="genre">
+						{% for genre in genres %}
+							{% if genre["genre"] != "\\N" and genre["genre"] != "Talk-Show" and genre["genre"] != "Game-Show" and genre["genre"] != "Reality-TV" and genre["genre"] != "News"%}
+								<option>{{ genre["genre"] }}</option>
+							{% endif %}
+						{% endfor %}
+					</select>
+				</div>
+				<br>
+				<div class="form-check">
+					<input class="form-check-input" type="radio" name="coolness" value="Popular" checked>
+				  	<label class="form-check-label" for="exampleRadios1">😀&nbsp;&nbsp;Popular Films</label>
+				</div>
+				<div class="form-check">
+				 	<input class="form-check-input" type="radio" name="coolness" value="Not So Popular">
+				  	<label class="form-check-label" for="exampleRadios2">🤓&nbsp;&nbsp;Not so Popular Films</label>
+				</div>
+				<div class="form-check">
+				 	<input class="form-check-input" type="radio" name="coolness" value="Lesser Known">
+				  	<label class="form-check-label" for="exampleRadios2">😎&nbsp;&nbsp;Lesser Known Films</label>
+				</div>
+				<br>
+				<button class="btn btn-primary" type="submit">Search for Cross Genres</button>
+			</form>
 		</div>
-		<br>
-		<div class="form-check">
-			<input class="form-check-input" type="radio" name="coolness" value="Popular" checked>
-		  	<label class="form-check-label" for="exampleRadios1">😀&nbsp;&nbsp;Popular Films</label>
-		</div>
-		<div class="form-check">
-		 	<input class="form-check-input" type="radio" name="coolness" value="Not So Popular">
-		  	<label class="form-check-label" for="exampleRadios2">🤓&nbsp;&nbsp;Not so Popular Films</label>
-		</div>
-		<div class="form-check">
-		 	<input class="form-check-input" type="radio" name="coolness" value="Lesser Known">
-		  	<label class="form-check-label" for="exampleRadios2">😎&nbsp;&nbsp;Lesser Known Films</label>
-		</div>
-		<br>
-		<button class="btn btn-primary" type="submit">Search for Cross Genres</button>
-	</form>
+	</div>
 {% endblock %}
