--- a/templates/results.html
+++ b/templates/results.html
@@ -43,6 +43,6 @@
 		<input type="hidden" name="coolness" value="{{ coolness }}">
 	</form>
 	<button class="btn btn-primary btn-sm" onclick="document.getElementById('cross-search').submit()">Find Cross Genres</button><br><br>
-	<a href="/" class="btn btn-primary btn-sm" role="button"> Back to Search </a>
+	<a href="/" class="btn btn-primary btn-sm" role="button"> Back to Genre Search </a>
 
 {% endblock %}
