--- a/templates/crossgenre.html
+++ b/templates/crossgenre.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 	<h1 class="display-3">Cross Genres</h1>
-	<p class="subtitulo">Find the highest rated movies on IMDB.</p>
+	<p class="subtitulo">Find most common cross genres.</p>
 	<div class="card border-light mb-3" style="max-width: 18rem; display: inline-block;">
 		<div class="card-body">
 			<form action="/crossgenre" method="POST">
