--- a/templates/crossgenres.html
+++ b/templates/crossgenres.html
@@ -11,7 +11,7 @@
 	<form action="/" id="{{ genre }}-search" method="POST">
 		<input type="hidden" name="genre" value='{{ genre }}'>
 		<input type="hidden" name="coolness" value="{{ coolness }}">
-		<h4>{{ original_genre }} with <a href="#" onclick="document.getElementById('{{ genre }}-search').submit()">{{ genre }}</a></h4>
+		<h3>{{ original_genre }} with <a href="#" onclick="document.getElementById('{{ genre }}-search').submit()">{{ genre }}</a></h3>
 	</form>
 	<table class="table table-borderless">
 			<tr>
@@ -51,5 +51,5 @@
 	<button type="button" class="btn btn-primary btn-sm" onclick="document.getElementById('notso-search').submit()">Not So Popular</button> 
 	<button type="button" class="btn btn-primary btn-sm" onclick="document.getElementById('less-search').submit()">Lesser Known</button>
 	<br><br>
-	<a href="/crossgenre" class="btn btn-primary btn-sm" role="button"> Back to Search </a>
+	<a href="/crossgenre" class="btn btn-primary btn-sm" role="button"> Back to Cross Genres </a>
 {%- endblock %}
