--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,10 +34,19 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/">Genre Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="/crossgenre">Cross Genre Search</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/genremix">Genre Mix</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                     </ul>
             </div>
         </nav>
+
+        {% if whoops %}
+            <header>
+                <div class="alert alert-primary border text-center" style="margin-bottom: 0px;" role="alert">
+                    {{ whoops }}
+                </div>
+            </header>
+        {% endif %}
 
 		<main class="container p-5">
             {% block main %}{% endblock %}
