--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,15 +10,18 @@
 
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/styles.css">
 
         <!-- favicon.ico -->
         <link href="/static/favicon.ico" rel="icon">
 
-        <link href="/static/styles.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+
+
 		
 		<title>Movie Finder</title>
 	</head>
@@ -32,7 +35,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/">Genre Search</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/genresearch">Genre Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="/crossgenre">Cross Genre Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="/genremix">Genre Mix</a></li>
                         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
@@ -53,8 +56,9 @@
         </main>
         
         <footer class="small text-center text-muted">
-            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.<br>Made with love by Leo <3.
+            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.<br>Made with love by Leo.
         </footer>
+
 
 	</body>
 
