--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
         </main>
         
         <footer class="small text-center text-muted">
-            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.<br>Made with love by Leo.
+            Information courtesy of <a href="http://www.imdb.com" target="_blank">IMDb</a>. Used with permission.<br>Made with love by <a href="https://github.com/leorapini" target="_blank">Leo</a>.
         </footer>
 
 
