--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block main %}
-	<h1 class="display-2" style="margin-top: 100px;">Discover.</h1>
+	<h1 class="display-3" style="margin-top: 50px;">Discover</h1>
 	<h4 style="font-weight: 300; "><a href="/genresearch">Movies by Genre</a></h4>
 	<h4 style="font-weight: 300;"><a href="/crossgenre">Most Common Cross Genres</a></h4>
 	<h4 style="font-weight: 300;"><a href="/genremix">Create Your Genre Mix</a></h4>
