--- a/templates/results.html
+++ b/templates/results.html
@@ -12,8 +12,8 @@
 				<td>
 					<a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank"><img src="{{ movie['poster'] }}"></a>
 					<br>
-					<a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank">{{ movie["primaryTitle"] }}</a> 
-					(<strong>{{ movie["averageRating"] }}</strong>)
+					<a href="https://www.imdb.com/title/{{ movie['tconst'] }}" target="_blank">{{ movie['primarytitle'] }}</a> 
+					(<strong>{{ movie['averagerating'] }}</strong>)
 				</td>
 				{% endif %}
 			{% endfor %}
